--- a/deployment/GithubPackageTest.nuspec
+++ b/deployment/GithubPackageTest.nuspec
@@ -16,7 +16,7 @@
   </metadata>
   <files>
     <file src="..\*.vl" target="" exclude="" />
-    <file src="..\help\**\*.vl" target="" exclude="" />
+    <file src="..\help\**\*.vl" target="\help" exclude="" />
     <file src="..\shaders\*.sdsl" target="\shaders" exclude="" />
     <!-- <file src="..\src\Whatever\bin\Release\netstandard2.0\Whatever.dll" target="lib\netstandard2.0" exclude="" /> -->
   </files>
